--- a/portfolio.html
+++ b/portfolio.html
@@ -33,22 +33,19 @@
     <main class="portfolio">
         <h2>Portfolio</h2>
         <div class="container">
-                <div class="row">
-                  <div class="col-6 col-sm-3">        
+                <div class="row row-cols-2">
+                  <div class="col">
+                      <img class="port-pics" src="assets/images/placeholder.jpg">
+                  </div>
+                  <div class="col">
                         <img class="port-pics" src="assets/images/placeholder.jpg">
                   </div>
-                  <div class="col-6 col-sm-3">
-                        <img class="port-pics" src="assets/images/placeholder.jpg">
+                  <div class="col">
+                        <img class="port-pics" src="assets/images/placeholder.jpg">      
                   </div>
-              
-                  <!-- Force next columns to break to new line -->
-                  <div class="w-100"></div>
-              
-                  <div class="col-6 col-sm-3">
-                        <img class="port-pics" src="assets/images/placeholder.jpg">
-                  </div>
-                  <div class="col-6 col-sm-3">
-                        <img class="port-pics" src="assets/images/placeholder.jpg">
+                  <div class="col">
+                        <img class="port-pics" src="assets/images/placeholder.jpg">      
+
                   </div>
                 </div>
               </div>
