--- a/contact.html
+++ b/contact.html
@@ -9,42 +9,53 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 </head>
 <body>
-    <header class="header">
-            <nav class="navbar navbar-expand-lg navbar-light bg-light">
-                    <a class="navbar-brand" href="#">Dustin Jackson</a>
-                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                        <span class="navbar-toggler-icon"></span>
-                    </button>
-                    <div class="collapse navbar-collapse" id="navbarNav">
-                        <ul class="navbar-nav">
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+                <a class="navbar-brand" href="index.html">Dustin Jackson</a>
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav">
                         <li class="nav-item active">
                             <a class="nav-link" href="index.html">About Me<span class="sr-only">(current)</span></a>
                         </li>
                         <li class="nav-item">
-                              <a class="nav-link" href="portfolio.html">Portfolio</a>
+                            <a class="nav-link" href="portfolio.html">Portfolio</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="contact.html">Contact</a>
                         </li>
-                    </div>
-                </nav>
-    </header>
+                    </ul>
+                </div>
+            </nav>
 
     <main class="contact">
         <h2>Contact</h2>
         <form>
-            <label></label>
-            <input>
-
-            <label></label>
-            <input>
-
-            <textarea cols="" rows=""></textarea>
+            <label>Name</label>
+            <br>
+            <input type="text">
+            <br>
+            <label>E-Mail</label>
+            <br>
+            <input type="email">
+            <br>
+            <label>Comments</label>
+            <br>
+            <textarea></textarea>
+            <br>
+            <input type="submit"> 
         </form>
     </main>
 
-    <footer>
+    <nav class="navbar fixed-bottom navbar-light bg-light">
+            <a href="https://www.facebook.com/dustin.guy.jackson">
+                <img ID="facebook" src="assets/images/facebook-logo.png">
+            </a>
             <p ID="copy">Copyright &copy;</p>
-    </footer>
+            <a href="https://www.linkedin.com/in/funnydustin/">
+                <img ID="linkedin" src="assets/images/linkedIn_logo.png">
+            </a>
+    </nav>
 </body>
 </html>
