--- a/index.html
+++ b/index.html
@@ -9,26 +9,25 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 </head>
 <body>
-    <header class="header">
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <a class="navbar-brand" href="#">Dustin Jackson</a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <a class="navbar-brand" href="index.html">Dustin Jackson</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
                 <li class="nav-item active">
                     <a class="nav-link" href="index.html">About Me<span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                      <a class="nav-link" href="portfolio.html">Portfolio</a>
+                    <a class="nav-link" href="portfolio.html">Portfolio</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="contact.html">Contact</a>
                 </li>
-            </div>
-        </nav>
-    </header>
+            </ul>
+        </div>
+    </nav>
 
     <main class="about-me">
         <h2>About Me</h2>
@@ -36,8 +35,14 @@
         <p>I'm a super hero with the transcendental powers of playing Dwarf Fortress and watching Star Trek TNG. I'm dipping my toes into web development, loving every small step and giant stride. I have familiarity with HTML and CSS, taking my first peek into Javascript in the next few weeks. If I had to pic a passion, the world of cybersecurity sounds tantilizing and exciting. I look forward to learning anything and everything. I love video games, so I feel like there's a lot of passion bleed from problem solving and engaging with new systems.</p>
     </main>
 
-    <footer>
+    <nav class="navbar fixed-bottom navbar-light bg-light">
+            <a href="https://www.facebook.com/dustin.guy.jackson">
+                <img ID="facebook" src="assets/images/facebook-logo.png">
+            </a>
             <p ID="copy">Copyright &copy;</p>
-    </footer>
+            <a href="https://www.linkedin.com/in/funnydustin/">
+                <img ID="linkedin" src="assets/images/linkedIn_logo.png">
+            </a>
+    </nav>
 </body>
 </html>
