threw on some finishing styling in CSS

--- a/contact.html
+++ b/contact.html
@@ -34,17 +34,17 @@
         <form>
             <label>Name</label>
             <br>
-            <input type="text">
+            <input id="name" type="text">
             <br>
             <label>E-Mail</label>
             <br>
-            <input type="email">
+            <input id="email" type="email">
             <br>
             <label>Comments</label>
             <br>
-            <textarea></textarea>
+            <textarea id="comment"></textarea>
             <br>
-            <input type="submit"> 
+            <input id="submit" type="submit"> 
         </form>
     </main>
 
