--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
 
     <main class="about-me">
         <h2>About Me</h2>
-        <img ID="profile-pic" src="assets/images/placeholder.jpg">
-        <p>I'm a super hero with the transcendental powers of playing Dwarf Fortress and watching Star Trek TNG. I'm dipping my toes into web development, loving every small step and giant stride. I have familiarity with HTML and CSS, taking my first peek into Javascript in the next few weeks. If I had to pic a passion, the world of cybersecurity sounds tantilizing and exciting. I look forward to learning anything and everything. I love video games, so I feel like there's a lot of passion bleed from problem solving and engaging with new systems.</p>
+            <img ID="profile-pic" src="assets/images/placeholder.jpg">
+            <p id="bio">I'm a super hero with the transcendental powers of playing Dwarf Fortress and watching Star Trek TNG. I'm dipping my toes into web development, loving every small step and giant stride. I have familiarity with HTML and CSS, taking my first peek into Javascript in the next few weeks. If I had to pic a passion, the world of cybersecurity sounds tantilizing and exciting. I look forward to learning anything and everything. I love video games, so I feel like there's a lot of passion bleed from problem solving and engaging with new systems.</p>
     </main>
 
     <nav class="navbar fixed-bottom navbar-light bg-light">
