--- a/portfolio.html
+++ b/portfolio.html
@@ -29,7 +29,7 @@
                 </div>
             </nav>
 
-    <main class="portfolio">
+    <div class="portfolio">
         <h2>Portfolio</h2>
         <div class="container">
                 <div class="row row-cols-2">
@@ -49,7 +49,7 @@
                 </div>
               </div>
     
-    </main>
+            </div>
     
     <nav class="navbar fixed-bottom navbar-light bg-light">
             <a href="https://www.facebook.com/dustin.guy.jackson">
