updated all styling to look a little cleaner / professional

--- a/portfolio.html
+++ b/portfolio.html
@@ -13,8 +13,8 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="index.html">Dustin Jackson</a>
+    <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-light">
+        <a class="navbar-brand" href="index.html">Dustin Jackson - Web Developer</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
             aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -45,16 +45,24 @@
             <p>Here's some cool stuff I made! Use WASD to catch the red box!</p>
             <p id="score">Score: 0</p>
         </div>
-        
-            <a href="https://dustinjack99.github.io/ScrabbleDabble/landing.html"><img class="portImages" src="assets/images/scrabble.png"></a>
+        <div id="portDiv">
+            <h4>Working Projects:</h4>
             <br>
-            <a href="https://dustinjack99.github.io/code-quiz/"><img class="portImages" src="assets/images/code-quiz.png"></a>
+            <a class="portAnchors" href="https://dustinjack99.github.io/ScrabbleDabble/landing.html">Scrabble Dabble!</a>
             <br>
-            <a href="https://dustinjack99.github.io/password-generator/"><img class="portImages" src="assets/images/passgen.png"></a>
-        
+            <img class="portImages" src="assets/images/scrabble.png">
+            <br>
+            <a class="portAnchors" href="https://dustinjack99.github.io/code-quiz/">Star Trek Quiz!</a>
+            <br>
+            <img class="portImages" src="assets/images/code-quiz.png">  
+            <br>
+            <a class="portAnchors" href="https://dustinjack99.github.io/password-generator/">Password Generator!</a>
+            <br>
+            <img class="portImages" src="assets/images/passgen.png">
+        </div>
     </div>
 
-    <nav class="navbar fixed-bottom navbar-light bg-light">
+    <nav class="navbar navbar-light bg-light">
         <a href="https://www.facebook.com/dustin.guy.jackson">
             <img ID="facebook" src="assets/images/facebook-logo.png">
         </a>
