--- a/index.html
+++ b/index.html
@@ -1,17 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Responsive Profile</title>
     <link rel="stylesheet" href="assets/style.css">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+        integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 </head>
+
 <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="index.html">Dustin Jackson</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+    <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-light">
+        <a class="navbar-brand" href="index.html">Dustin Jackson - Web Developer</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
@@ -31,21 +35,33 @@
 
     <main class="about-me">
         <h2>About Me</h2>
-            <img ID="profile-pic" src="assets/images/placeholder.jpg">
-            <p id="bio">I'm a super hero with the transcendental powers of playing Dwarf Fortress and watching Star Trek TNG. I'm dipping my toes into web development, loving every small step and giant stride. I have familiarity with HTML and CSS, taking my first peek into Javascript in the next few weeks. If I had to pic a passion, the world of cybersecurity sounds tantilizing and exciting. I look forward to learning anything and everything. I love video games, so I feel like there's a lot of passion bleed from problem solving and engaging with new systems.</p>
+        <img ID="profile-pic" src="assets/images/placeholder.jpg">
+        <p id="bio">I'm a super hero with the transcendental powers of playing Dwarf Fortress and watching Star Trek
+            TNG. I'm dipping my toes into web development, loving every small step and giant stride. I have familiarity
+            with HTML and CSS, taking my first peek into Javascript in the next few weeks. If I had to pic a passion,
+            the world of cybersecurity sounds tantilizing and exciting. I look forward to learning anything and
+            everything. I love video games, so I feel like there's a lot of passion bleed from problem solving and
+            engaging with new systems.</p>
     </main>
 
-    <nav class="navbar fixed-bottom navbar-light bg-light">
-            <a href="https://www.facebook.com/dustin.guy.jackson">
-                <img ID="facebook" src="assets/images/facebook-logo.png">
-            </a>
-            <p ID="copy">Copyright &copy;</p>
-            <a href="https://www.linkedin.com/in/funnydustin/">
-                <img ID="linkedin" src="assets/images/linkedIn_logo.png">
-            </a>
+    <nav class="navbar navbar-light bg-light">
+        <a href="https://www.facebook.com/dustin.guy.jackson">
+            <img ID="facebook" src="assets/images/facebook-logo.png">
+        </a>
+        <p ID="copy">Copyright &copy;</p>
+        <a href="https://www.linkedin.com/in/funnydustin/">
+            <img ID="linkedin" src="assets/images/linkedIn_logo.png">
+        </a>
     </nav>
-    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
+        integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+        integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+        crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
+        integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
+        crossorigin="anonymous"></script>
 </body>
+
 </html>
