finalized pimping out the portfolio page

--- a/portfolio.html
+++ b/portfolio.html
@@ -46,7 +46,7 @@
             <p id="score">Score: 0</p>
         </div>
         <div id="portDiv">
-            <h4>Working Projects:</h4>
+            <h4>Projects:</h4>
             <br>
             <a class="portAnchors" href="https://dustinjack99.github.io/ScrabbleDabble/landing.html">Scrabble Dabble!</a>
             <br>
