real, actual, finishing touches that include required materials for grading

--- a/index.html
+++ b/index.html
@@ -33,24 +33,30 @@
         </div>
     </nav>
 
-    <main class="about-me">
+    <div class="about-me">
         <h2>About Me</h2>
         <img ID="profile-pic" src="assets/images/placeholder.jpg">
-        <p id="bio">I'm a super hero with the transcendental powers of playing Dwarf Fortress and watching Star Trek
-            TNG. I'm dipping my toes into web development, loving every small step and giant stride. I have familiarity
-            with HTML and CSS, taking my first peek into Javascript in the next few weeks. If I had to pic a passion,
-            the world of cybersecurity sounds tantilizing and exciting. I look forward to learning anything and
-            everything. I love video games, so I feel like there's a lot of passion bleed from problem solving and
-            engaging with new systems.</p>
-    </main>
+        <p id="bio">I'm a web developer! In my work, I love every small step and giant stride. I have deep familiarity
+            with HTML and CSS, with a deep, demonstrated abililty for tinkering with JavaScript. I look forward to learning anything and
+            everything - which fuels my passion for problem solving and engaging with new systems / technologies.
+            <br><br>
+            I'm also a super hero with the transcendental powers of playing Dwarf Fortress and watching Star Trek
+            TNG.</p>
+        <a href="assets/images/portfolio.pdf">Check out my Resume!</a>
+        <br>
+        <a href="mailto:dustin.guy.jackson@gmail.com">Shoot me an Email!</a>
+    </div>
 
     <nav class="navbar navbar-light bg-light">
-        <a href="https://www.facebook.com/dustin.guy.jackson">
-            <img ID="facebook" src="assets/images/facebook-logo.png">
-        </a>
         <p ID="copy">Copyright &copy;</p>
+        <a href="https://github.com/dustinjack99">
+            <img ID="git" src="assets/images/git-logo.png">
+        </a>
         <a href="https://www.linkedin.com/in/funnydustin/">
             <img ID="linkedin" src="assets/images/linkedIn_logo.png">
+        </a>
+        <a href="https://www.facebook.com/dustin.guy.jackson">
+            <img ID="facebook" src="assets/images/facebook-logo.png">
         </a>
     </nav>
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
