--- a/portfolio.html
+++ b/portfolio.html
@@ -48,27 +48,36 @@
         <div id="portDiv">
             <h4>Projects:</h4>
             <br>
-            <a class="portAnchors" href="https://dustinjack99.github.io/ScrabbleDabble/landing.html">Scrabble Dabble!</a>
+            <a class="portAnchors" href="https://dustinjack99.github.io/ScrabbleDabble/landing.html">Scrabble
+                Dabble!</a>
             <br>
+            <a href="https://github.com/dustinjack99/ScrabbleDabble">Git Repo</a>
             <img class="portImages" src="assets/images/scrabble.png">
-            <br>
             <a class="portAnchors" href="https://dustinjack99.github.io/code-quiz/">Star Trek Quiz!</a>
             <br>
-            <img class="portImages" src="assets/images/code-quiz.png">  
+            <a href="https://github.com/dustinjack99/code-quiz">Git Repo</a>
+            <br>
+            <img class="portImages" src="assets/images/code-quiz.png">
             <br>
             <a class="portAnchors" href="https://dustinjack99.github.io/password-generator/">Password Generator!</a>
             <br>
+            <a href="https://github.com/dustinjack99/password-generator">Git Repo</a>
+            <br>
             <img class="portImages" src="assets/images/passgen.png">
+
         </div>
     </div>
 
     <nav class="navbar navbar-light bg-light">
-        <a href="https://www.facebook.com/dustin.guy.jackson">
-            <img ID="facebook" src="assets/images/facebook-logo.png">
-        </a>
         <p ID="copy">Copyright &copy;</p>
+        <a href="https://github.com/dustinjack99">
+            <img ID="git" src="assets/images/git-logo.png">
+        </a>
         <a href="https://www.linkedin.com/in/funnydustin/">
             <img ID="linkedin" src="assets/images/linkedIn_logo.png">
+        </a>
+        <a href="https://www.facebook.com/dustin.guy.jackson">
+            <img ID="facebook" src="assets/images/facebook-logo.png">
         </a>
     </nav>
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
