--- a/portfolio.html
+++ b/portfolio.html
@@ -53,17 +53,17 @@
             <br>
             <a href="https://github.com/dustinjack99/ScrabbleDabble">Git Repo</a>
             <img class="portImages" src="assets/images/scrabble.png">
+            <br>
+            <a class="portAnchors" href="https://duckpals.herokuapp.com/">DuckPals!</a>
+            <br>
+            <a href="https://github.com/austenpturner/DuckPals">Git Repo</a>
+            <img class="portImages" src="assets/images/duckpals.png">
+            <br>
             <a class="portAnchors" href="https://dustinjack99.github.io/code-quiz/">Star Trek Quiz!</a>
             <br>
             <a href="https://github.com/dustinjack99/code-quiz">Git Repo</a>
-            <br>
             <img class="portImages" src="assets/images/code-quiz.png">
-            <br>
-            <a class="portAnchors" href="https://dustinjack99.github.io/password-generator/">Password Generator!</a>
-            <br>
-            <a href="https://github.com/dustinjack99/password-generator">Git Repo</a>
-            <br>
-            <img class="portImages" src="assets/images/passgen.png">
+
 
         </div>
     </div>
