--- a/public/portfolio.html
+++ b/public/portfolio.html
@@ -8,16 +8,23 @@
     <title>Responsive Profile</title>
     <link rel="stylesheet" href="./assets/css/style.css">
     <link rel="stylesheet" href="./assets/css/snakestyle.css">
+    <script src="https://kit.fontawesome.com/fc63d3b05c.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
-    <nav class="">
-        <h4>Dustin Jackson - Web Developer</h4>
-        <ul>
+    <nav class="navHead">
+        <div class="name">
+            <h3>Dustin Jackson</h3>
+            <h4>Web Developer</h4>
+        </div>
+        <ul class="header">
             <li><a class="" href=" index">About Me</a></li>
             <li><a class="" href="portfolio">Portfolio</a></li>
             <li><a class="" href="contact">Contact</a></li>
         </ul>
+        <div class="menu-btn">
+            <i class="fas fa-bars fa-2x"></i>
+        </div>
     </nav>
 
     <main>
@@ -56,7 +63,7 @@
         </div>
     </main>
 
-    <nav class="">
+    <nav class="footer">
         <p ID="copy">Copyright &copy;</p>
         <a href="https://github.com/dustinjack99">
             <img ID="git" src="assets/images/git-logo.png">
@@ -69,6 +76,9 @@
         </a>
     </nav>
     <script src="./script.js"></script>
+    <script>
+        document.querySelector(".menu-btn").addEventListener('click', () => document.querySelector(".header").classList.toggle("show"));
+    </script>
 </body>
 
 </html>
