--- a/public/index.html
+++ b/public/index.html
@@ -7,40 +7,84 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Responsive Profile</title>
     <link rel="stylesheet" href="./assets/css/style.css">
+    <script src="https://kit.fontawesome.com/fc63d3b05c.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
-    <nav class="">
-        <h4>Dustin Jackson - Web Developer</h4>
-        <ul>
+
+    <nav class="navHead">
+        <div class="name">
+            <h3>Dustin Jackson</h3>
+            <h4>Web Developer</h4>
+        </div>
+        <ul class="header">
             <li><a class="" href=" index">About Me</a></li>
             <li><a class="" href="portfolio">Portfolio</a></li>
             <li><a class="" href="contact">Contact</a></li>
         </ul>
+        <div class="menu-btn">
+            <i class="fas fa-bars fa-2x"></i>
+        </div>
     </nav>
 
-    <main>
+    <main class="">
         <div class="about-me">
-            <h2>About Me</h2>
-            <img ID="profile-pic" src="assets/images/placeholder.jpg">
-            <p id="bio">I'm a web developer! In my work, I love every small step and giant stride. I have deep
-                familiarity
-                with HTML and CSS, with a deep, demonstrated abililty for tinkering with JavaScript. I look forward to
-                learning anything and
-                everything - which fuels my passion for problem solving and engaging with new systems / technologies.
+            <img id="profile-pic" src="assets/images/placeholder.jpg">
+            <p id="bio">Dustin is a developer familiar with agile development, leading creative teams, and a deep love
+                for learning new technologies and libraries. His biggest passions are tinkering, breaking, and
+                fixing
+                things.
+
                 <br><br>
-                I'm also a super hero with the transcendental powers of playing Dwarf Fortress and watching Star Trek
+                He is also a super hero with the transcendental powers of playing Dwarf Fortress and watching Star
+                Trek
                 TNG.</p>
+
+            <div class="skills">
+                <ul>
+                    <h3>Programming Languages:</h3>
+                    <li>Javascript <img class="wider" src="assets/images/jslogo.png"></li>
+                    <li>Typescript <img src="assets/images/tslogo.png"></li>
+                    <li>Shell scripting <img class="wider" src="assets/images/cmd.png"></li>
+                </ul>
+                <ul>
+                    <h3>Web Languages:</h3>
+                    <li>HTML5 <img src="assets/images/html.png"></li>
+                    <li>
+                        CSS
+                        <img src="assets/images/css.png">
+                    </li>
+                    <li>SASS<img src="assets/images/sass.png"></li>
+                </ul>
+                <ul>
+                    <h3>Proficient Tools:</h3>
+                    <li>MySQL <img class="wider" src="assets/images/mysql.png"></li>
+                    <li>Postgres <img class="wider" src="assets/images/postgres.png"></li>
+                    <li>NoSQL <img src="assets/images/mongo.png"></li>
+                    <li>Git <img src="assets/images/git.png"></li>
+                    <li>Node.js <img class="wider" src="assets/images/node.png"></li>
+                    <li>React <img class="wider" src="assets/images/react.png"></li>
+                    <li>Express <img src="assets/images/express.png"></li>
+                </ul>
+                <ul>
+                    <h3>Skills:</h3>
+                    <li class="skill">Lead large, highly collaborative teams.</li>
+                    <li class="skill">Professionally trained public speaker.</li>
+                    <li class="skill">Working in demanding, fast-paced work environment.</li>
+                    <li class="skill">Agiles software development</li>
+                    <li class="skill">Test Driven Development</li>
+                </ul>
+            </div>
             <a href="assets/images/portfolio.pdf">Check out my Resume!</a>
             <br>
             <a href="mailto:dustin.guy.jackson@gmail.com">Shoot me an Email!</a>
         </div>
     </main>
 
-    <nav class="">
+    <nav class="footer">
         <p ID="copy">Copyright &copy;</p>
         <a href="https://github.com/dustinjack99">
-            <img ID="git" src="assets/images/git-logo.png">
+            <img id="git" src="assets/images/git-logo.png">
         </a>
         <a href="https://www.linkedin.com/in/funnydustin/">
             <img ID="linkedin" src="assets/images/linkedIn_logo.png">
@@ -49,6 +93,9 @@
             <img ID="facebook" src="assets/images/facebook-logo.png">
         </a>
     </nav>
+    <script>
+        document.querySelector(".menu-btn").addEventListener('click', () => document.querySelector(".header").classList.toggle("show"));
+    </script>
 </body>
 
 </html>
